# lint-claude

./: .agent-lint.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  coverage.json  mypy.ini  pyproject.toml
.claude/agents/: python-code-auditor.md
.github/workflows/: ci.yml  lint.yml  publish.yml
.github/workflows/examples/: lint-full-scan.yml  lint-on-pr.yml  lint-with-review-comment.yml
docs/: ARCHITECTURE.md  PUBLISHING.md  QUICK_PUBLISH.md  TROUBLESHOOTING.md  verification-report-2025-11-12.md
docs/plans/: 2025-11-11-claude-lint.md  2025-11-11-code-review-fixes.md  2025-11-11-production-readiness-fixes.md  2025-11-11-production-ready-improvements.md  2025-11-12-90-plus-grade-fixes.md  2025-11-12-a-plus-grade-fixes.md
src/claude_lint/: __init__.py  __version__.py  api_client.py  batch_processor.py  cache.py  cli.py  collector.py  config.py  file_reader.py  file_utils.py  git_utils.py  guidelines.py  logging_config.py  metrics.py  orchestrator.py  processor.py  progress.py  rate_limiter.py  reporter.py  retry.py  test_feature.py  types.py  validation.py
tests/: test_api_client.py  test_api_timeout.py  test_batch_processor.py  test_cache.py  test_cli.py  test_cli_exceptions.py  test_collector.py  test_collector_patterns.py  test_config.py  test_config_snake_case.py  test_config_validation.py  test_file_reader.py  test_file_size_limits.py  test_file_utils.py  test_git_utils.py  test_git_utils_timeout.py  test_guidelines.py  test_integration.py  test_logging_config.py  test_metrics.py  test_orchestrator.py  test_orchestrator_file_errors.py  test_orchestrator_refactoring.py  test_processor.py  test_progress.py  test_progress_display.py  test_rate_limiter.py  test_reporter.py  test_retry.py  test_retry_exceptions.py  test_validation.py
tests/integration/: __init__.py  test_full_workflow.py
tests/integration/fixtures/test_project/: .agent-lint.json  CLAUDE.md  bad.py
