[project]
name = "claude-lint"
version = "0.3.0"
description = "CLAUDE.md compliance checker using Claude API"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.18.0,<0.50",
    "click>=8.1.0,<9.0",
    "rich>=13.0.0,<14.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "ruff>=0.1.0,<0.3",
    "mypy>=1.8.0,<2.0",
    "pre-commit>=3.5.0,<4.0",
]

[project.scripts]
claude-lint = "claude_lint.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
