[project]
name = "lint-claude"
version = "0.3.0"
description = "Enforce your CLAUDE.md guidelines using Claude AI - intelligent linting for agent instructions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Vlad Temian", email = "vladtemian@gmail.com"},
]
maintainers = [
    {name = "Vlad Temian", email = "vladtemian@gmail.com"},
]
keywords = [
    "ai-agent",
    "linter",
    "code-quality",
    "compliance",
    "claude",
    "anthropic",
    "static-analysis",
    "guidelines",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.18.0,<0.50",
    "click>=8.1.0,<9.0",
    "rich>=13.0.0,<14.0",
    "pydantic>=2.0.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0",
    "pytest-cov>=4.1.0,<5.0",
    "ruff>=0.1.0,<0.3",
    "mypy>=1.8.0,<2.0",
    "pre-commit>=3.5.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/vtemian/lint-claude"
Documentation = "https://github.com/vtemian/lint-claude/blob/main/README.md"
Repository = "https://github.com/vtemian/lint-claude"
Issues = "https://github.com/vtemian/lint-claude/issues"
Changelog = "https://github.com/vtemian/lint-claude/blob/main/CHANGELOG.md"

[project.scripts]
lint-claude = "claude_lint.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # allow assert in tests
    "SIM117",  # allow nested with statements in tests
    "PTH123",  # allow open() in tests for flexibility
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
